--- a/extra_tags_crawler/Genshin Impact(284157)/process.ipynb
+++ b/extra_tags_crawler/Genshin Impact(284157)/process.ipynb
@@ -447,7 +447,7 @@
     "        \"所属\": {nation: make_tag_img(nation)+nation if (nation != '其它' and nation != '至冬') else nation}\n",
     "    }\n",
     "\n",
-    "with open(\"284157.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"../../outputs/extra_tags/284157.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(extra_tags, f, ensure_ascii=False, indent=2)"
    ]
   },
@@ -461,7 +461,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CCB-TagsCI",
    "language": "python",
    "name": "python3"
   },
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
