--- a/extra_tags_crawler/Umamusume(175552)/process.ipynb
+++ b/extra_tags_crawler/Umamusume(175552)/process.ipynb
@@ -1817,7 +1817,7 @@
    "source": [
     "import json\n",
     "\n",
-    "output_path = Path(\"175552.json\")\n",
+    "output_path = Path(\"../../outputs/extra_tags/175552.json\")\n",
     "\n",
     "terrain_columns = [\"草地\", \"泥地\"]\n",
     "distance_columns = [\"短距离\", \"英里\", \"中距离\", \"长距离\"]\n",
@@ -1881,7 +1881,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "CCB-TagsCI",
    "language": "python",
    "name": "python3"
   },
@@ -1895,7 +1895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
