--- a/extra_tags_crawler/Umamusume(175552)/process.ipynb
+++ b/extra_tags_crawler/Umamusume(175552)/process.ipynb
@@ -1881,7 +1881,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CCB-TagsCI",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
